--- a/index.html
+++ b/index.html
@@ -436,9 +436,9 @@
 
           <!-- Project group -->
           <div class="project-group">
-            <div class="row row-cols-1">
+            <div class="row row-cols-md-2 row-cols-1">
               <!-- Item 1 -->
-              <div class="col">
+              <div class="col mt-4">
                 <article class="project-item">
                   <!-- Content -->
                   <div class="projet-item__content">
@@ -468,7 +468,7 @@
               </div>
 
               <!-- Item 2 -->
-              <div class="col">
+              <div class="col mt-4">
                 <article class="project-item">
                   <!-- Content -->
                   <div class="projet-item__content">
@@ -498,7 +498,7 @@
               </div>
 
               <!-- Item 3 -->
-              <div class="col">
+              <div class="col mt-4">
                 <article class="project-item">
                   <!-- Content -->
                   <div class="projet-item__content">
@@ -528,7 +528,7 @@
               </div>
 
               <!-- Item 4 -->
-              <div class="col">
+              <div class="col mt-4">
                 <article class="project-item">
                   <!-- Content -->
                   <div class="projet-item__content">
