Add responsive for Video thumb in Stat part on tablet

--- a/index.html
+++ b/index.html
@@ -618,155 +618,157 @@
             <div class="stat-video__label">INTRO VIDEO</div>
           </div>
         </section>
+      </div>
 
-        <!-- Feedback -->
-        <section class="feedback">
-          <!-- Header -->
-          <section class="feedback__header">
-            <h2 class="heading feedback__heading">What people says</h2>
-            <p class="desc feedback__desc">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
-              non nisl tincidunt ut elementum turpis.
-            </p>
-          </section>
-
-          <!-- Feedback group -->
-          <div class="feedback-group">
-            <div class="row row-cols-1 flex-nowrap">
-              <!-- Item 1 -->
-              <div class="col">
-                <article class="feedback-item">
-                  <p class="feedback-item__content">
-                    “Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa.”
-                  </p>
-                  <div class="feedback-item__info">
-                    <img
-                      src="./assets/images/feedback-avatar.png"
-                      alt="Joe Elia"
-                      class="feedback-item__avatar"
-                    />
-                    <h3 class="feedback-item__name">Joe Elia</h3>
-                  </div>
-                  <p class="desc feedback-item__desc">
-                    User Interface Design at PCL Lab
-                  </p>
-                </article>
-              </div>
-
-              <!-- Item 2 -->
-              <div class="col">
-                <article class="feedback-item">
-                  <p class="feedback-item__content">
-                    “Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa.”
-                  </p>
-                  <div class="feedback-item__info">
-                    <img
-                      src="./assets/images/feedback-avatar.png"
-                      alt="John Babier"
-                      class="feedback-item__avatar"
-                    />
-                    <h3 class="feedback-item__name">John Babier</h3>
-                  </div>
-                  <p class="desc feedback-item__desc">
-                    User Interface Design at PCL Lab
-                  </p>
-                </article>
-              </div>
-
-              <!-- Item 3 -->
-              <div class="col">
-                <article class="feedback-item">
-                  <p class="feedback-item__content">
-                    “Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa.”
-                  </p>
-                  <div class="feedback-item__info">
-                    <img
-                      src="./assets/images/feedback-avatar.png"
-                      alt="Micheall Joe"
-                      class="feedback-item__avatar"
-                    />
-                    <h3 class="feedback-item__name">Micheall Joe</h3>
-                  </div>
-                  <p class="desc feedback-item__desc">
-                    User Interface Design at PCL Lab
-                  </p>
-                </article>
-              </div>
-
-              <!-- Item 4 -->
-              <div class="col">
-                <article class="feedback-item">
-                  <p class="feedback-item__content">
-                    “Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa.”
-                  </p>
-                  <div class="feedback-item__info">
-                    <img
-                      src="./assets/images/feedback-avatar.png"
-                      alt="Ha Quoc Huy"
-                      class="feedback-item__avatar"
-                    />
-                    <h3 class="feedback-item__name">Ha Quoc Huy</h3>
-                  </div>
-                  <p class="desc feedback-item__desc">
-                    User Interface Design at PCL Lab
-                  </p>
-                </article>
-              </div>
-
-              <!-- Item 5 -->
-              <div class="col">
-                <article class="feedback-item">
-                  <p class="feedback-item__content">
-                    “Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa.”
-                  </p>
-                  <div class="feedback-item__info">
-                    <img
-                      src="./assets/images/feedback-avatar.png"
-                      alt="Bellie Bumble"
-                      class="feedback-item__avatar"
-                    />
-                    <h3 class="feedback-item__name">Bellie Bumble</h3>
-                  </div>
-                  <p class="desc feedback-item__desc">
-                    User Interface Design at PCL Lab
-                  </p>
-                </article>
-              </div>
-            </div>
-          </div>
-
-          <!-- Active circle group -->
-          <div class="active-group">
-            <div class="active-circle active"></div>
-            <div class="active-circle"></div>
-            <div class="active-circle"></div>
-            <div class="active-circle"></div>
-            <div class="active-circle"></div>
-          </div>
-
-          <!-- Decor -->
-          <img
-            src="./assets/images/feedback-decor-left.svg"
-            alt=""
-            class="feedback-decor--left"
-          />
-          <img
-            src="./assets/images/feedback-decor-right.svg"
-            alt=""
-            class="feedback-decor--right"
-          />
+      <!-- Feedback -->
+      <section class="feedback">
+        <!-- Header -->
+        <section class="feedback__header">
+          <h2 class="heading feedback__heading">What people says</h2>
+          <p class="desc feedback__desc">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
+            non nisl tincidunt ut elementum turpis.
+          </p>
         </section>
 
+        <!-- Feedback group -->
+        <div class="feedback-group">
+          <div class="row row-cols-1 flex-nowrap">
+            <!-- Item 1 -->
+            <div class="col">
+              <article class="feedback-item">
+                <p class="feedback-item__content">
+                  “Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident, sunt in culpa.”
+                </p>
+                <div class="feedback-item__info">
+                  <img
+                    src="./assets/images/feedback-avatar.png"
+                    alt="Joe Elia"
+                    class="feedback-item__avatar"
+                  />
+                  <h3 class="feedback-item__name">Joe Elia</h3>
+                </div>
+                <p class="desc feedback-item__desc">
+                  User Interface Design at PCL Lab
+                </p>
+              </article>
+            </div>
+
+            <!-- Item 2 -->
+            <div class="col">
+              <article class="feedback-item">
+                <p class="feedback-item__content">
+                  “Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident, sunt in culpa.”
+                </p>
+                <div class="feedback-item__info">
+                  <img
+                    src="./assets/images/feedback-avatar.png"
+                    alt="John Babier"
+                    class="feedback-item__avatar"
+                  />
+                  <h3 class="feedback-item__name">John Babier</h3>
+                </div>
+                <p class="desc feedback-item__desc">
+                  User Interface Design at PCL Lab
+                </p>
+              </article>
+            </div>
+
+            <!-- Item 3 -->
+            <div class="col">
+              <article class="feedback-item">
+                <p class="feedback-item__content">
+                  “Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident, sunt in culpa.”
+                </p>
+                <div class="feedback-item__info">
+                  <img
+                    src="./assets/images/feedback-avatar.png"
+                    alt="Micheall Joe"
+                    class="feedback-item__avatar"
+                  />
+                  <h3 class="feedback-item__name">Micheall Joe</h3>
+                </div>
+                <p class="desc feedback-item__desc">
+                  User Interface Design at PCL Lab
+                </p>
+              </article>
+            </div>
+
+            <!-- Item 4 -->
+            <div class="col">
+              <article class="feedback-item">
+                <p class="feedback-item__content">
+                  “Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident, sunt in culpa.”
+                </p>
+                <div class="feedback-item__info">
+                  <img
+                    src="./assets/images/feedback-avatar.png"
+                    alt="Ha Quoc Huy"
+                    class="feedback-item__avatar"
+                  />
+                  <h3 class="feedback-item__name">Ha Quoc Huy</h3>
+                </div>
+                <p class="desc feedback-item__desc">
+                  User Interface Design at PCL Lab
+                </p>
+              </article>
+            </div>
+
+            <!-- Item 5 -->
+            <div class="col">
+              <article class="feedback-item">
+                <p class="feedback-item__content">
+                  “Duis aute irure dolor in reprehenderit in voluptate velit
+                  esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+                  occaecat cupidatat non proident, sunt in culpa.”
+                </p>
+                <div class="feedback-item__info">
+                  <img
+                    src="./assets/images/feedback-avatar.png"
+                    alt="Bellie Bumble"
+                    class="feedback-item__avatar"
+                  />
+                  <h3 class="feedback-item__name">Bellie Bumble</h3>
+                </div>
+                <p class="desc feedback-item__desc">
+                  User Interface Design at PCL Lab
+                </p>
+              </article>
+            </div>
+          </div>
+        </div>
+
+        <!-- Active circle group -->
+        <div class="active-group">
+          <div class="active-circle active"></div>
+          <div class="active-circle"></div>
+          <div class="active-circle"></div>
+          <div class="active-circle"></div>
+          <div class="active-circle"></div>
+        </div>
+
+        <!-- Decor -->
+        <img
+          src="./assets/images/feedback-decor-left.svg"
+          alt=""
+          class="feedback-decor--left"
+        />
+        <img
+          src="./assets/images/feedback-decor-right.svg"
+          alt=""
+          class="feedback-decor--right"
+        />
+      </section>
+
+      <div class="container">
         <!-- FAQ -->
         <section class="faq">
           <h2 class="heading faq__heading">
