Add responsive for Mood part on tablet

--- a/index.html
+++ b/index.html
@@ -888,9 +888,9 @@
 
           <!-- Mood group -->
           <div class="mood__img-group">
-            <div class="row row-cols-1 flex-nowrap">
-              <div class="col">
-                <figure>
+            <div class="row row-cols-md-3 gx-md-3 row-cols-1 flex-nowrap">
+              <div class="col-md-4 col">
+                <figure class="mood__img-wrap">
                   <img
                     src="./assets/images/mood-01.png"
                     alt="mood-01"
@@ -898,8 +898,8 @@
                   />
                 </figure>
               </div>
-              <div class="col">
-                <figure>
+              <div class="col-md-4 col">
+                <figure class="mood__img-wrap">
                   <img
                     src="./assets/images/mood-02.png"
                     alt="mood-02"
@@ -907,8 +907,8 @@
                   />
                 </figure>
               </div>
-              <div class="col">
-                <figure>
+              <div class="col-md-4 col">
+                <figure class="mood__img-wrap">
                   <img
                     src="./assets/images/mood-03.png"
                     alt="mood-03"
