Add responsive for Contact part on tablet

--- a/index.html
+++ b/index.html
@@ -944,6 +944,18 @@
           alt=""
           class="contact__decor"
         />
+
+        <!-- Decor -->
+        <img
+          src="./assets/images/contact-decor-left.svg"
+          alt=""
+          class="contact__decor--left"
+        />
+        <img
+          src="./assets/images/contact-decor-right.svg"
+          alt=""
+          class="contact__decor--right"
+        />
       </section>
     </main>
 
