Add responsive for navbar on desktop

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
 
         <!-- Avatar -->
-        <a href="#header"
+        <a href="#header" class="nav__avatar-wrap"
           ><img
             src="./assets/images/avatar.png"
             alt="avatar"
