Add responsive for Service part on desktop

--- a/index.html
+++ b/index.html
@@ -360,11 +360,11 @@
 
           <!-- Service group -->
           <div class="service-group">
-            <div class="row row-cols-1 flex-nowrap">
+            <div class="row row-cols-lg-3 row-cols-1 flex-nowrap">
               <!-- Item 1 -->
               <div class="col">
                 <article class="service-item">
-                  <div class="service-item__icon">
+                  <div class="service-item__icon circle">
                     <img src="./assets/images/light-bulb.svg" alt="" />
                   </div>
                   <h3 class="heading--small service-item__heading">
@@ -380,7 +380,7 @@
               <!-- Item 2 -->
               <div class="col">
                 <article class="service-item">
-                  <div class="service-item__icon">
+                  <div class="service-item__icon circle">
                     <img src="./assets/images/pencil.svg" alt="" />
                   </div>
                   <h3 class="heading--small service-item__heading">
@@ -396,7 +396,7 @@
               <!-- Item 3 -->
               <div class="col">
                 <article class="service-item">
-                  <div class="service-item__icon">
+                  <div class="service-item__icon circle">
                     <img src="./assets/images/phone.svg" alt="" />
                   </div>
                   <h3 class="heading--small service-item__heading">
