Add responsive for Mood part

--- a/index.html
+++ b/index.html
@@ -888,7 +888,7 @@
 
           <!-- Mood group -->
           <div class="mood__img-group">
-            <div class="row row-cols-md-3 gx-md-3 row-cols-1 flex-nowrap">
+            <div class="row row-cols-md-3 row-cols-1 flex-nowrap">
               <div class="col-md-4 col">
                 <figure class="mood__img-wrap">
                   <img
