Add responsive for Contact part on desktop

--- a/index.html
+++ b/index.html
@@ -931,7 +931,11 @@
       <!-- Contact -->
       <section class="contact" id="contact">
         <div class="contact-content">
-          <img src="./assets/images/congrat-icon.svg" alt="congrat icon" />
+          <img
+            src="./assets/images/congrat-icon.svg"
+            alt="congrat icon"
+            class="contact__icon"
+          />
           <h2 class="heading contact__heading">Got a project? Let’s talk</h2>
           <p class="contact__desc">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. In urna,
