Add Hover effect for FAQ part

--- a/index.html
+++ b/index.html
@@ -811,15 +811,19 @@
             <div class="faq-item">
               <!-- Content -->
               <div class="faq-item__content">
-                <h3 class="faq-item__question heading--small">
-                  What is your hourly rate?
-                </h3>
                 <input
                   type="radio"
                   name="answer-toggle"
                   id="answer-toggle1"
                   hidden
                 />
+                <label
+                  class="faq-item__question heading--small"
+                  for="answer-toggle1"
+                >
+                  What is your hourly rate?
+                </label>
+
                 <p class="faq-item__answer desc">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
                   urna, non nisl tincidunt ut elementum turpis.
@@ -836,15 +840,18 @@
             <div class="faq-item">
               <!-- Content -->
               <div class="faq-item__content">
-                <h3 class="faq-item__question heading--small">
-                  What type of projects do you take on?
-                </h3>
                 <input
                   type="radio"
                   name="answer-toggle"
                   id="answer-toggle2"
                   hidden
                 />
+                <label
+                  class="faq-item__question heading--small"
+                  for="answer-toggle2"
+                >
+                  What type of projects do you take on?
+                </label>
                 <p class="faq-item__answer desc">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
                   urna, non nisl tincidunt ut elementum turpis.
@@ -861,15 +868,18 @@
             <div class="faq-item">
               <!-- Content -->
               <div class="faq-item__content">
-                <h3 class="faq-item__question heading--small">
-                  What time-zone do you work in?
-                </h3>
                 <input
                   type="radio"
                   name="answer-toggle"
                   id="answer-toggle3"
                   hidden
                 />
+                <label
+                  class="faq-item__question heading--small"
+                  for="answer-toggle3"
+                >
+                  What time-zone do you work in?
+                </label>
                 <p class="faq-item__answer desc">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
                   urna, non nisl tincidunt ut elementum turpis.
@@ -886,15 +896,18 @@
             <div class="faq-item">
               <!-- Content -->
               <div class="faq-item__content">
-                <h3 class="faq-item__question heading--small">
-                  How often can we communicate?
-                </h3>
                 <input
                   type="radio"
                   name="answer-toggle"
                   id="answer-toggle4"
                   hidden
                 />
+                <label
+                  class="faq-item__question heading--small"
+                  for="answer-toggle4"
+                >
+                  How often can we communicate?
+                </label>
                 <p class="faq-item__answer desc">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
                   urna, non nisl tincidunt ut elementum turpis.
