Remove nav avatar

--- a/index.html
+++ b/index.html
@@ -114,14 +114,16 @@
         <div class="nav__circle-group">
           <!-- Mail group -->
           <div class="mail-group">
-            <a href="#!" class="circle">
+            <a href="mailto:truongquangle26@gmail.com" class="circle">
               <img
                 src="./assets/images/letter.svg"
                 alt=""
                 class="mail__letter-icon"
               />
             </a>
-            <a href="#!" class="mail__link">hi@arif.interactive</a>
+            <a href="mailto:truongquangle26@gmail.com" class="mail__link"
+              >truongquangle26@gmail.com</a
+            >
           </div>
 
           <input type="checkbox" id="menu-toggle" hidden />
@@ -134,14 +136,6 @@
           <label for="menu-toggle" class="menu-cover"></label>
 
           <div class="menu-drawer">
-            <!-- Avatar -->
-            <a href="#header"
-              ><img
-                src="./assets/images/avatar.png"
-                alt="avatar"
-                class="nav__avatar"
-            /></a>
-
             <!-- Nav list -->
             <ul>
               <li>
@@ -171,14 +165,6 @@
             </div>
           </div>
         </div>
-
-        <!-- Avatar -->
-        <a href="#header" class="nav__avatar-wrap"
-          ><img
-            src="./assets/images/avatar.png"
-            alt="avatar"
-            class="nav__avatar"
-        /></a>
 
         <!-- Nav list -->
         <ul class="nav-list">
@@ -1033,12 +1019,6 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer__content">
-        <img
-          src="./assets/images/avatar.png"
-          alt="avatar"
-          class="footer__avatar"
-        />
-
         <!-- Nav on mobile -->
         <nav class="footer__nav">
           <ul class="footer__nav-list">
@@ -1067,24 +1047,18 @@
         <div class="nav__circle-group">
           <!-- Mail group -->
           <div class="mail-group">
-            <a href="#!" class="circle">
+            <a href="mailto:truongquangle26@gmail.com" class="circle">
               <img
                 src="./assets/images/letter.svg"
                 alt=""
                 class="mail__letter-icon"
               />
             </a>
-            <a href="#!" class="mail__link">hi@arif.interactive</a>
+            <a href="mailto:truongquangle26@gmail.com" class="mail__link"
+              >truongquangle26@gmail.com
+            </a>
           </div>
         </div>
-
-        <!-- Avatar -->
-        <a href="#header" class="nav__avatar-wrap"
-          ><img
-            src="./assets/images/avatar.png"
-            alt="avatar"
-            class="nav__avatar"
-        /></a>
 
         <!-- Nav list -->
         <ul class="nav-list">
